feat: formula plugin (#367)
