# src/api/graphql-api/row/model/formula-field-error.model.ts
@@ -1,0 +1,16 @@
+import { Field, ObjectType } from '@nestjs/graphql';
+
+@ObjectType()
+export class FormulaFieldErrorModel {
+  @Field()
+  field: string;
+
+  @Field()
+  expression: string;
+
+  @Field()
+  error: string;
+
+  @Field(() => Boolean)
+  defaultUsed: boolean;
+}
