# src/api/graphql-api/row/model/row.model.ts
@@ -1,6 +1,7 @@
 import { Field, Int, ObjectType } from '@nestjs/graphql';
 import { Prisma } from 'src/__generated__/client';
 import { JSONResolver, DateTimeResolver } from 'graphql-scalars';
+import { FormulaFieldErrorModel } from 'src/api/graphql-api/row/model/formula-field-error.model';
 import { RowsConnection } from 'src/api/graphql-api/row/model/rows-connection.model';
 
 export type RowModelContext = {
@@ -33,6 +34,9 @@ export class RowModel {
 
   @Field(() => JSONResolver)
   data: Prisma.JsonValue;
+
+  @Field(() => [FormulaFieldErrorModel], { nullable: true })
+  formulaErrors?: FormulaFieldErrorModel[];
 
   @Field(() => RowsConnection)
   rowForeignKeysTo: RowsConnection;
